bcs-ui/backend/templatesets/legacy_apps/configuration/yaml_mode/manifests/DaemonSet.yaml
---
apiVersion: apps/v1 # apiVersion is related to the cluster version
kind: DaemonSet
metadata:
  name: nginx
spec:
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest # replace with image url of BCS dept
