bcs-ui/backend/templatesets/legacy_apps/configuration/yaml_mode/manifests/StatefulSet.yaml
---
apiVersion: apps/v1 # apiVersion is related to the cluster version
kind: StatefulSet
metadata:
  name: web
spec:
  serviceName: "nginx"
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx-slim:0.8 # replace with image url of BCS dept
        ports:
        - containerPort: 80
          name: web
