bcs-ui/backend/templatesets/legacy_apps/configuration/yaml_mode/manifests/CustomManifest.yaml
---
apiVersion: v1 # apiVersion is related to the cluster version
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1 # apiVersion is related to the cluster version(e.g extensions/v1beta1 in 1.8)
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9 # replace with image url of BCS dept
        ports:
        - containerPort: 80
