bcs-ui/backend/templatesets/legacy_apps/configuration/yaml_mode/manifests/Service.yaml
---
apiVersion: v1 # apiVersion is related to the cluster version
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
